# minesweeperMiso

./: .gitignore  README.md  all.js  default.nix  lib.js  minesweeper.nix  out.js  out.stats
src/: Board.hs  Cell.hs  Consts.hs  Main.hs  Msg.hs  Number.hs  Pos.hs  Square.hs  minesweeper.cabal  stack-ghc8-lts-7-no-ghci.yaml  stack.yaml
