name:                minesweeper
version:             0.1.0.0
synopsis:            Miso Minesweeper
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable minesweeper
  main-is:             Main.hs
  build-depends:       base, miso, mtl, containers, random, MonadRandom
  default-language:    Haskell2010
  other-modules:       Board, Cell, Consts, Msg, Pos, RightClick, Smiley
